retaguarda/falco/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco-ingress
  namespace: falco
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "falco.poc.bemfacil.digital"
    alb.ingress.kubernetes.io/load-balancer-name: alb-falco-poc
    alb.ingress.kubernetes.io/scheme: internet-facing  
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/subnets: subnet-0bf69d5c218b573a5, subnet-0fa2ecf4677708161
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:343236792564:certificate/d2669d5e-1817-48ce-9560-fe18b7086895
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
     

    # Configuração de timeout (em segundos, 0 para desabilitar)
    # alb.ingress.kubernetes.io/load-balancer-attributes: |
    #   idle_timeout.timeout_seconds=4000
    #   routing.http.drop_invalid_header_fields.enabled=true


    # Configurações de health check
    # alb.ingress.kubernetes.io/healthcheck-path: /
    # alb.ingress.kubernetes.io/healthcheck-port: "9000"
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    # alb.ingress.kubernetes.io/success-codes: "200,302,403,404"
spec:
  ingressClassName: alb
  rules:
  - host: falco.poc.bemfacil.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: falco-falcosidekick-ui
            port:
              number: 2802
